# APS_VotoElettronico_Gruppo30

./: .gitignore  README.md  pyproject.toml
performance/: __init__.py  common.py  crypto_costs.py  message_sizes.py  run_all.py  verification_latency.py
src/evote_demo/: __init__.py  crypto.py  gui.py  merkle.py  models.py  services.py
